# audio-latency-tester

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
alt-utils/: .gitignore  avg.py  clicks.py  main.py  pyproject.toml
src/: actor.rs  app.rs  config.rs  error.rs  lib.rs  main.rs
src/audio/: alsa.rs  mod.rs  pipewire.rs
src/sample/: fileloader.rs  mod.rs
src/trigger/: evdev.rs
