[package]
name = "audio-latency-tester"
version = "0.1.0"
edition = "2024"
authors = ["sbchild <sbchild0@gmail.com>"]
license = "MIT"

# [[bin]]
# name = "alt-alsa"
# path = "src/bin/audio-latency-tester-alsa.rs"

# [[bin]]
# name = "alt-pw"
# path = "src/bin/audio-latency-tester-pw.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cpal = { version = "0.17.3" }
evdev = "0.13.2"
hound = "3.5.1"
pipewire = "0.9.2"
resampler = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.9.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
